# eZix

./: .gitignore  Cargo.toml  README.md  manifest.xml
src/: config.rs  lib.rs  logger.rs  main.rs
src/modules/: control_panel.rs  firewall.rs  mod.rs  shell.rs  xserver.rs
src/modules/zen_browser/: mod.rs  paths.rs  util.rs
src/tools/: registry.rs
